# Pico

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
core/: bark.py  config.py  database.py  llm.py  logger.py
docs/: setup.md
sdk/: bark.py  config.py.example  llm.py  memory.py  sms.py  system.py  telegram.py  tools.py  tools_backup.py  uscis.py
sdk/agents/: __init__.py  base.py  google.py  ollama.py  openai.py
services/: agents.py  api.py  bot.py  scheduler.py  sms.py  telegram_bot.py
services/monitoring/: system.py
services/pico_music/: main.py
services/pico_music/templates/: index.html
services/scheduler/: __main__.py
services/scheduler/tasks/: temp.py  uscis.py
systemd/: pico-bot.service  pico-music.service  pico-scheduler.service  pico-sms.service  pico.service
