[project]
name = "pico"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.1",
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
    "aiogram>=3.15.0",
    "python-multipart>=0.0.19",
    "ollama",
    "litellm",
    "pyotp>=2.9.0",
    "curl-cffi>=0.14.0",
    "playwright>=1.57.0",
    "playwright-stealth>=2.0.0",
]
